added svg save, loading

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="in-container">
 <input type="text" id="username"></input><input id="manda" type="submit" value="show" onclick="startCalendar()"></input></form>
 </div>
-<div id="calendar-container"></div>
+<div id="calendar-container"><br/><br/>enter username above</div>
 
 <script>
 
